# cora

./: Cargo.toml  README.md
src/: base.rs  lib.rs  numbers.rs
src/error/: mod.rs
src/linalg/: mod.rs
