[package]
name = "cora"
description = "Another machine learning library in rust."
version = "0.1.0"
authors = ["MonadKai <onlookerliu_sjtu@163.com>"]
edition = "2018"
license = "Apache-2.0"
readme = "README.md"
keywords = ["machine-learning", "scikit-learn"]
categories = ["science"]

[features]
default = ["datasets"]
ndarray-bindings = ["ndarray"]
nalgebra-bindings = ["nalgebra"]
datasets = []

[dependencies]
ndarray = { version = "0.13", optional = true }
nalgebra = { version = "0.22.0", optional = true }
polars = { version = "0.8.1", optional = true }
num-traits = "0.2.12"
num = "0.3.0"
rand = "0.7.3"
rand_distr = "0.3.0"
serde = { version = "1.0.115", features = ["derive"] }
serde_derive = "1.0.115"

[dev-dependencies]
criterion = "0.3"
serde_json = "1.0"
bincode = "1.3.1"

[[bench]]
name = "distance"
harness = false